<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".explicitActivity">

    <EditText
        android:id="@+id/enterEmailID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/subjectID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/enterEmailID"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/subjectID"
        android:inputType="textEmailSubject"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/composeID"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subjectID"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/composeID"
        android:inputType="textMultiLine"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonToMainID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="17dp"
        android:onClick="sendMessage"
        android:text="@string/buttonToMainID"
        android:textColor="#2a2ca3"
        android:textSize="24sp" />
</RelativeLayout>